fixed a missalignement issue

--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -32,3 +32,5 @@ a{
 source{
     height: 11%;
 }
+
+img {display:block}
