--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -128,6 +128,7 @@
         line-height: 1.5;
         position: relative;
         width: 50%;
+        height: auto;
         img{
             width: 100%;
             height: 100%;
